--- a/style.scss
+++ b/style.scss
@@ -18,11 +18,20 @@
 * {
   box-sizing: border-box;
 }
+html {
+  font-size: calc(100vw / 1920 * 20);
+}
+body {
+  display: flex;
+  justify-content: center;
+}
 // !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 .container-global {
   flex-wrap: wrap;
+  // width: 100vw;
+  max-width: 98%;
   // width: fit-content;
-  height: fit-content;
+  // height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -39,6 +48,7 @@
   }
   &_color-cloudiness {
     background-color: var(--bg-container-cloudiness);
+    box-shadow: 1vw -1vw 3vw -1vw var(--color-shadow);
   }
 
   &__container-day,
@@ -77,7 +87,7 @@
 .container-cloudiness {
   &__big-section {
     width: 22vw;
-    min-width: fit-content;
+    // min-width: fit-content;
     // ??????????????????????????????????????????????????????????????????????
     // height: 40vw;
     border-radius: 1.5vw;
@@ -113,7 +123,7 @@
     display: block;
     text-align: center;
     margin-top: 1vw;
-    font-size: 1.5vw;
+    font-size: 2rem;
     font-weight: 500;
     color: var(--color-paremetr-city);
   }
@@ -122,7 +132,8 @@
     margin-top: 6vw;
     justify-content: space-around;
     color: var(--color-paremetr-city);
-    font-size: 1vw;
+    font-size: 1.3rem;
+    // При большем font-size parametrs не вмещаются!
   }
   &__value-measurement,
   &__curent-time-of-day {
@@ -135,27 +146,27 @@
     // ???????????????????????????
   }
   &__units-measurement {
-    font-size: 1rem;
+    font-size: 1.3rem;
   }
   &__button {
     display: block;
-    margin: auto;
     border: none;
     margin: 1vw auto;
+  }
+  &__button-text {
+    font-size: 1.3rem;
   }
 }
 .container-day {
   &_color-btn-day {
     background-color: var(--bg-container-day);
     color: var(--color-paremetr-city);
-    font-size: 1rem;
   }
 }
 .container-night {
   &_color-btn-night {
     background-color: var(--bg-container-night);
     color: var(--color-paremetr-city);
-    font-size: 1rem;
   }
 
   &__satellite {
@@ -182,7 +193,6 @@
   &_color-btn-cloudiness {
     background-color: var(--bg-container-cloudiness);
     color: var(--color-paremetr-city);
-    font-size: 1rem;
   }
 }
 //
@@ -225,27 +235,6 @@
 }
 
 //
-
-@media screen and (max-width: 1000px) {
-  .container-global {
-    &__container-day,
-    &__container-night,
-    &__container-cloudiness {
-      flex-direction: column;
-    }
-  }
-}
-@media screen and (max-width: 700px) {
-  body {
-    display: flex;
-    height: fit-content;
-    flex-direction: column;
-  }
-  .container-global {
-    flex-direction: column;
-  }
-}
-
 @keyframes shine {
   from {
     box-shadow: 0px 0px 10px -5px var(--sun-color-second);
@@ -282,5 +271,94 @@
     opacity: 1;
     left: -0.5vw;
     top: 9.5vw;
+  }
+}
+// For tablet iPad_Pro.
+@media screen and (max-width: 1366px) {
+  body {
+    background-color: var(--background-color);
+  }
+  .container-global {
+    max-width: 100%;
+    align-items: flex-start;
+    height: 100vh;
+    &__container-day,
+    &__container-night,
+    &__container-cloudiness {
+      flex-direction: column;
+    }
+  }
+  .container-day,
+  .container-night,
+  .container-cloudiness {
+    &__big-section,
+    &__small-section {
+      min-width: 30vw;
+    }
+    &__figure-big {
+      width: 13vw;
+      height: 13vw;
+      margin: 4vw auto;
+    }
+    &__parametrs {
+      margin-top: 10vw;
+      // font-size: 1.3rem;
+    }
+    &__temperature-curent {
+      margin-top: 3vw;
+    }
+  }
+  #cloud {
+    top: -18vw;
+  }
+}
+
+// For iFone 12_pro
+@media screen and (max-width: 512px) {
+  html {
+    font-size: calc(100vw / 1920 * 70);
+  }
+  body {
+    background-color: var(--background-color);
+  }
+  .container-global {
+    display: flex;
+    height: fit-content;
+    width: fit-content;
+    flex-direction: column;
+    align-items: center;
+  }
+  .container-day,
+  .container-night,
+  .container-cloudiness {
+    &__big-section,
+    &__small-section {
+      min-width: 90vw;
+      border-radius: 5vw;
+      margin-top: 5vw;
+    }
+    &__figure-big {
+      width: 50vw;
+      height: 50vw;
+      margin: 10vw auto;
+    }
+    &__parametrs {
+      margin-top: 40vw;
+    }
+    &__temperature-curent {
+      margin-top: 5vw;
+    }
+    &__button {
+      margin: 7vw auto;
+    }
+    &__curent-time-of-day {
+      margin: 5vw auto;
+    }
+    &__value-measurement {
+      margin: 5vw auto;
+    }
+  }
+  #cloud {
+    top: -18v;
   }
 }
